only install on first stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
           script: yarn run flow
 
         - stage: "Test"
+          install: skip
           script: yarn run test-karma
           script: yarn run test-unit
 
