--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ jobs:
     include:
         - stage: "Lint"
           script: yarn run lint
-          script: yarn run flow
-
+        - script: yarn run flow
+        - script: lein eastwood
+        - script: lein bikeshed
         - stage: "Test"
           install: skip
-          script:
-              - yarn run test-karma
-              - yarn run test-unit
+          script: yarn run test-karma
+        - script: yarn run test-unit
 
 cache:
     directories:
